# arqera-math

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  publish.yml
src/arqera_math/: __init__.py  bayesian.py  constants.py  control_theory.py  decision_theory.py  game_theory.py  graph_analysis.py  information_theory.py  multi_objective.py  preconditions.py  queueing.py  quorum_sensing.py  stability.py  stigmergy.py  temporal_dynamics.py
tests/: test_bayesian.py  test_constants.py  test_decision_theory.py  test_graph_analysis.py  test_information_theory.py  test_multi_objective.py  test_preconditions.py  test_quorum_sensing.py  test_stability.py  test_stigmergy.py  test_temporal_dynamics.py
