[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arqera-math"
version = "0.1.0"
description = "Mathematical foundations extracted from ARQERA's engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/arqera_math"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
