[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arqera-math"
version = "0.1.0"
description = "Mathematical foundations for AI governance — 9 algorithms, zero dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "ARQERA", email = "engineering@arqera.io" },
]
keywords = [
    "bayesian",
    "governance",
    "trust",
    "graph-analysis",
    "information-theory",
    "decision-theory",
    "multi-objective",
    "pagerank",
    "entropy",
    "ai-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://arqera.io"
Repository = "https://github.com/Arqera-IO/arqera-math"
Documentation = "https://github.com/Arqera-IO/arqera-math#readme"
Issues = "https://github.com/Arqera-IO/arqera-math/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/arqera_math"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["src"]
